# GlowEngine

./: .gitignore  CMakeLists.txt  README.md  debug.bat  release.bat
.github/workflows/: build.yml
editor/: CMakeLists.txt
editor/include/editor/panels/: FileExplorerPanel.hpp  HierarchyPanel.hpp  InspectorPanel.hpp  MenuBar.hpp  OpenProjectPopup.hpp  ToolbarPanel.hpp  ViewportPanel.hpp
editor/src/: main.cpp
editor/src/editor/panels/: FileExploererPanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  MenuBar.cpp  OpenProjectPopup.cpp  ToolbarPanel.cpp  ViewportPanel.cpp
exampleProj/: example.glowproject  level0.map
include/GlowEngine/core/: GameLoop.hpp  GlowApp.hpp
include/GlowEngine/render/: Window.hpp
include/GlowEngine/utils/: MapLoader.hpp  Time.hpp
sandbox/: CMakeLists.txt
sandbox/assets/maps/: example.map
sandbox/src/: main.cpp
src/GlowEngine/core/: GameLoop.cpp  GlowApp.cpp
src/GlowEngine/render/: Window.cpp
src/GlowEngine/utils/: MapLoader.cpp  Time.cpp
